# Multi-Agent

./: README.txt
agents/: agent0.py
hospital_ops/: .gitignore  README.md  pyproject.toml
hospital_ops/src/hospital_ops/: crew.py  main.py
hospital_ops/src/hospital_ops/common/: constants.py  utils.py
hospital_ops/src/hospital_ops/config/: agents.yaml  tasks.yaml
hospital_ops/src/hospital_ops/context/senior_analyst/: equations.txt  hospital_knowledge.txt
hospital_ops/src/hospital_ops/tools/: custom.py  imported.py  run_tool.py
